# typingCheat

./: .gitignore  CMakeLists.txt  OCR.cpp  OCR.h  capture.cpp  capture.h  input.cpp  input.h  main.cpp  proc.cpp  proc.h  selectRect.cpp  selectRect.h
保留/: read.cpp
